# low-latency-matching-engine

./: .gitignore  CMakeLists.txt  README.md  components.txt  main.cpp
core/: id_generator.hpp  resting_order.hpp  time.hpp  types.hpp
engine/: matching_engine.cpp  matching_engine.hpp
gateway/: order_entry.hpp  parser.cpp  parser.hpp
order_book/: deque_order_book.cpp  deque_order_book.hpp  list_order_book.cpp  list_order_book.hpp  order_book.hpp  simple_order_book.cpp  simple_order_book.hpp
tests/: tests.hpp
types/: types.hpp
